# wasm_component_layer

./: Cargo.toml
component-macro/: Cargo.toml
component-macro/src/: bindgen.rs  flags.rs  lib.rs
examples/: resource.rs  single_component.rs
examples/resource/: Cargo.toml
examples/resource/wit/: component.wit
examples/single_component/: Cargo.toml  component.wasm
examples/single_component/src/: lib.rs
examples/single_component/wit/: component.wit
src/: abi.rs  func.rs  lib.rs  values.rs
wit-bindgen/: Cargo.toml
wit-bindgen/src/: lib.rs  rust.rs  types.rs
