[package]
name = "wasm_component_layer_wit_bindgen"
version = "0.1.0"
authors = ["The Wasmtime Project Developers"]
description = "Internal `*.wit` support for the `wasm_component_layer` crate's macros"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/DouglasDwyer/wasm_component_layer"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", default-features = false }
heck = { version = "0.4", default-features = false }
wit-parser = { version = "0.200", default-features = false }
indexmap = { version = "2.0", default-features = false }
syn = { version = "2.0", default-features = false, features = ["full"] }
prettyplease = { version = "0.2", default-features = false }
